# smart-home

./: .gitignore  .gitmodules  LICENSE
.github/workflows/: boiler.yaml  broadlink-mqtt.yaml  embedded_onoff.yml  hap-ui.yaml  heater.yaml  virtual-ac.yaml
apps/boiler/: Cargo.toml  Dockerfile
apps/boiler/src/: config.rs  device.rs  main.rs  state.rs
apps/boiler/testing_fixtures/: invalid_config.toml  valid_config.toml
apps/hap-ui/: .gitignore  Dockerfile  go.mod  go.sum  main.go
apps/hap-ui/ac/: config.go  handler.go  hap.go  state.go  state_test.go
apps/hap-ui/air_conditioner/: config.go  config_test.go  handler.go  hap.go  state.go
apps/hap-ui/air_conditioner_v2/: config.go  config_test.go  handler.go  hap.go  state.go  state_test.go
apps/hap-ui/airconditioner/: config.go  config_test.go  handler.go  hap.go  state.go  state_test.go
apps/hap-ui/boiler/: config.go  handler.go  hap.go  state.go  state_test.go
apps/hap-ui/common/: config.go  config_test.go  handler.go  state.go  state_test.go
apps/hap-ui/config/: config.go  config_test.go
apps/hap-ui/heater/: config.go  handler.go  hap.go  state.go
apps/hap-ui/testing_fixtures/: invalid_config.toml  valid_config.toml
apps/heater/: Cargo.toml  Dockerfile
apps/heater/src/: config.rs  device.rs  main.rs  state.rs
apps/heater/testing_fixtures/: invalid_config.toml  valid_config.toml
apps/virtual-ac/: Cargo.toml  Dockerfile
apps/virtual-ac/src/: ac.rs  characteristics.rs  config.rs  device.rs  homekit.rs  main.rs  state.rs  thermal_sensor.rs
apps/virtual-ac/testing_fixtures/: invalid_config.toml  valid_config.toml
embedded/: .gitignore  Cargo.toml
embedded/onoff/: Cargo.toml
embedded/onoff/src/: main.rs  net_stack.rs
helm-charts/boiler/: Chart.yaml  values.yaml
helm-charts/boiler/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  serviceaccount.yaml
helm-charts/broadlink-mqtt/: Chart.yaml  values.yaml
helm-charts/broadlink-mqtt/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistentvolumeclaim.yaml  serviceaccount.yaml
helm-charts/hap-ui/: Chart.yaml  values.yaml
helm-charts/hap-ui/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistentvolumeclaim.yaml  serviceaccount.yaml
helm-charts/heater/: Chart.yaml  values.yaml
helm-charts/heater/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  serviceaccount.yaml
helm-charts/mosquitto/: Chart.yaml  values.yaml
helm-charts/mosquitto/templates/: configmap.yaml  deployment.yaml  persistentvolumelaim.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm-charts/virtual-ac/: Chart.yaml  values.yaml
helm-charts/virtual-ac/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  serviceaccount.yaml
helm-charts/zigbee2mqtt/: Chart.yaml  values.yaml
helm-charts/zigbee2mqtt/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistentvolumeclaim.yaml  serviceaccount.yaml
