[package]
name = "virtual-ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
futures = "0.3"
hap = { git = "https://github.com/sivakov512/hap-rs", version = "0.1.0-pre.15", branch = "patch-verify" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"

[dev-dependencies]
rstest = "0.18"
